# Ingenieria_2

Act_1/: main.cpp
Act_2/: CMakeLists.txt  main.cpp
Act_2/my_library/: CMakeLists.txt  my_library.cpp
Act_4/: CMakeLists.txt  main.cpp
